[package]
name = "matching-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dev-dependencies]
pade.workspace = true
pade-macro.workspace = true
testing-tools.workspace = true
divan = "0.1.14"

[dependencies]
angstrom-types.workspace = true
angstrom-utils.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
uniswap_v3_math.workspace = true
itertools.workspace = true
malachite = "0.4.0"
malachite-q = "0.4.0"
pade.workspace = true
pade-macro.workspace = true
rand.workspace = true
rand_distr.workspace = true
tokio.workspace = true
reth-tasks.workspace = true
criterion.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
reth-provider.workspace = true

arraydeque = "0.5"
num-bigfloat = "1.7"
once_cell = "1.20.2"

# Using clap for our bookgen command-line tool
clap = "4.5.4"

[[bench]]
name = "volume_solver"
harness = false


[profile.maxperf]
lto = "fat"
codegen-units = 1
incremental = false
opt-level = 3
panic = 'abort'
overflow-checks = false
