[package]
name = "pade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
angstrom-types.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true