[package]
name = "pade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
bitvec = "1.0.1"
alloy-primitives.workspace = true
alloy-sol-types.workspace = true