[package]
name = "pade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
thiserror.workspace = true
bitvec = "1.0.1"
pade-macro.workspace = true
bytes = "1.7.2"
alloy.workspace = true
