[package]
name = "angstrom-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = []

[dependencies]
angstrom-types.workspace = true
angstrom-utils.workspace = true
angstrom-network.workspace = true
consensus.workspace = true
order-pool.workspace = true

reth-primitives.workspace = true

bincode = { workspace = true, features = ["derive", "serde"] }
# misc
jsonrpsee = { workspace = true, features = ["server", "macros"] }
serde_json.workspace = true
serde.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
async-trait.workspace = true
thiserror.workspace = true
rand = "0.8.5"

reth-metrics = { workspace = true, features = ["common"] }
metrics.workspace = true

strum = { workspace = true, features = ["derive"] }
tracing.workspace = true


tower-http = { version = "0.5.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "1.2.0"
