[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true
ethers-core.workspace = true
reth-primitives.workspace = true
serde.workspace = true
reth-codecs.workspace = true
reth-rlp.workspace = true
secp256k1.workspace = true
