[package]
name = "sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = "0.1.11"
tokio = { version = "1.21", default-features = false }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3.26"
pin-project = "1.0.12"
futures-util = "0.3.25"
ethers-core = "2.0"
revm = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
eyre = "0.6.8"
async-trait = "0.1.68"