[package]
name = "angstrom-submission"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

pin-project.workspace = true
serde.workspace = true


angstrom-types.workspace = true
angstrom-utils.workspace = true

tokio-stream.workspace = true
tokio.workspace = true
futures.workspace = true
# reth
reth-provider.workspace = true

# alloy  
alloy-primitives.workspace = true
#alloy-providers.workspace = true

# misc
anyhow.workspace = true
