[package]
name = "angstrom-types"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22.1"
bitmaps.workspace = true
reth-network-peers = { workspace = true, features = ["secp256k1"] }
blsful.workspace = true
bytes = "1.4"
tracing.workspace = true
thiserror.workspace = true
itertools.workspace = true
serde_json.workspace = true
reth-primitives.workspace = true
revm.workspace = true
reth-codecs.workspace = true
secp256k1.workspace = true
open-fastrlp = "0.1.4"
hex-literal = "0.4.1"
anyhow.workspace = true
modular-bitfield = "0.11.2"
alloy-sol-macro = { workspace = true, features = ["json"] }
alloy-sol-types.workspace = true
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
alloy-rlp.workspace = true
alloy-rlp-derive.workspace = true
derive_more = "0.99.17"
eyre.workspace = true
bincode = { workspace = true, features = ["derive", "serde"] }

alloy-contract = "0.1.3"
serde = { workspace = true, optional = true, default-features = false, features = [
  "derive",
] }

rand = { version = "0.8.5", optional = true }

[dev-dependencies]
rand.workspace = true

[features]
default = ["serde"]
testnet = ["dep:rand"]
serde = ["dep:serde", "alloy-primitives/serde"]
