[package]
name = "validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guard-utils.workspace = true
guard-eth.workspace = true
rayon.workspace = true

# ethers
ethers = "2.0.10"
ethers-middleware.workspace = true
ethers-providers.workspace = true
ethers-core.workspace = true
ethers-signers.workspace = true
auto_impl.workspace = true
# anvil.workspace = true
# anvil-core.workspace = true
anyhow.workspace = true
hex-literal.workspace = true
guard-types.workspace = true

derive_more = "0.99.17"

# revm
revm.workspace = true

# reth
reth-primitives.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-db = { workspace = true, features = ["mdbx"] }
reth-interfaces.workspace = true

# async/futures
tokio.workspace = true
futures = "0.3.26"
pin-project = "1.0.12"
futures-util.workspace = true
async-trait = "0.1.68"
parking_lot = "0.12.1"

# misc
eyre = "0.6.8"
secp256k1 = { version = "0.27.0", default-features = false, features = [
  "global-context",
  "rand-std",
  "recovery",
] }

serial_test = "2.0.0"
byteorder = "1.4.3"

# error
thiserror = "1.0.44"

# cache
schnellru = "0.2"

# serde
serde.workspace = true
serde_json = { workspace = true, features = ["arbitrary_precision"] }

# alloy
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
