[package]
name = "guard-discv4"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Ethereum network discovery
"""

[dependencies]
# reth
reth-primitives.workspace = true
reth-rlp.workspace = true

reth-rlp-derive = { git = "https://github.com/paradigmxyz/reth", rev = "d8b1609" }
reth-net-common = { git = "https://github.com/paradigmxyz/reth", rev = "d8b1609" }
reth-net-nat = { git = "https://github.com/paradigmxyz/reth", rev = "d8b1609" }

# ethereum
discv5 = { git = "https://github.com/sigp/discv5" }
secp256k1 = { workspace = true, features = [
  "global-context",
  "rand-std",
  "recovery",
  "serde",
] }
enr = { workspace = true, default-features = false, features = [
  "rust-secp256k1",
] }

# async/futures
tokio = { workspace = true, features = ["io-util", "net", "time"] }
tokio-stream.workspace = true

# misc
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
hex = "0.4"
rand = { workspace = true, optional = true }
generic-array = "0.14"
serde = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
tokio = { workspace = true, features = ["macros"] }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "d8b1609" }

[features]
default = ["serde"]
test-utils = ["dep:rand"]
serde = ["dep:serde"]
