[package]
name = "guard-discv4"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Ethereum network discovery
"""

[dependencies]
# reth
reth-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rlp-derive.workspace = true

rlp = "0.5"                                                                                                         # needed for enr
reth-net-common = { git = "https://github.com/paradigmxyz/reth", rev = "3a8fe5a734bb04ceef3e47c577524b0b30875a99" }
reth-net-nat = { git = "https://github.com/paradigmxyz/reth", rev = "3a8fe5a734bb04ceef3e47c577524b0b30875a99" }

# ethereum
discv5 = { git = "https://github.com/sigp/discv5" }
secp256k1 = { workspace = true, features = [
  "global-context",
  "rand-std",
  "recovery",
  "serde",
] }
enr = { workspace = true, default-features = false, features = [
  "rust-secp256k1",
] }

# async/futures
tokio = { workspace = true, features = ["io-util", "net", "time"] }
tokio-stream.workspace = true

# misc
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
hex = "0.4"
rand = { workspace = true, optional = true }
generic-array = "0.14.7"
serde = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
tokio = { workspace = true, features = ["macros"] }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", version = "0.1.0-alpha.10" }

[features]
default = ["serde"]
test-utils = ["dep:rand"]
serde = ["dep:serde"]
