[package]
name = "guard-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Ethereum network support
"""

[package.metadata.cargo-udeps.ignore]
normal = [
  # Used for diagrams in docs
  "aquamarine",
]

[dependencies]
# reth
reth-interfaces.workspace = true
reth-primitives.workspace = true
reth-network-api.workspace = true
alloy-rlp.workspace = true
reth-tasks.workspace = true
reth-transaction-pool.workspace = true
reth-provider.workspace = true
reth-rpc-types.workspace = true
anyhow.workspace = true

reth-net-common = { git = "https://github.com/paradigmxyz/reth", rev = "337fb31" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth", rev = "337fb31" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", rev = "337fb31" }
reth-dns-discovery = { git = "https://github.com/paradigmxyz/reth", rev = "337fb31" }
guard-eth-wire = { path = "../guard-eth-wire" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth", rev = "337fb31" }
alloy-rlp-derive.workspace = true

guard-types.workspace = true
guard-utils.workspace = true

# async/futures
futures.workspace = true
pin-project.workspace = true
tokio = { workspace = true, features = [
  "io-util",
  "net",
  "macros",
  "rt-multi-thread",
  "time",
] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["codec"] }


# io
serde = { workspace = true, optional = true }
humantime-serde = { version = "1.1", optional = true }
serde_json = { workspace = true, optional = true }

# metrics
reth-metrics = { workspace = true, features = ["common"] }
metrics.workspace = true

# misc
auto_impl = "1"
aquamarine = "0.3.0"
tracing.workspace = true
fnv = "1.0"
thiserror.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
linked_hash_set = "0.1"
linked-hash-map = "0.5.6"
rand.workspace = true
secp256k1 = { workspace = true, features = [
  "global-context",
  "rand-std",
  "recovery",
] }

enr = { workspace = true, features = ["rust-secp256k1"], optional = true }
ethers-core = { workspace = true, default-features = false, optional = true }
tempfile = { version = "3.3", optional = true }

[dev-dependencies]
# reth

reth-discv4 = { git = "https://github.com/paradigmxyz/reth", rev = "337fb31", features = [
  "test-utils",
] }
reth-interfaces = { workspace = true, features = ["test-utils"] }

# we need to enable the test-utils feature in our own crate to use utils in
# integration tests
# guard-network = { path = ".", features = ["test-utils"] }

reth-provider = { workspace = true, features = ["test-utils"] }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "337fb31" }
reth-transaction-pool = { workspace = true, features = ["test-utils"] }

ethers-core = { workspace = true, default-features = false }
ethers-providers = { workspace = true, default-features = false, features = [
  "ws",
] }
ethers-signers = { workspace = true, default-features = false }
ethers-middleware = { workspace = true, default-features = false }

enr = { workspace = true, features = ["serde", "rust-secp256k1"] }

# misc
hex = "0.4"
tempfile = "3.3"
serial_test = "2.0"

[features]
default = ["serde"]
serde = [
  "dep:serde",
  "dep:humantime-serde",
  "secp256k1/serde",
  "enr?/serde",
  "dep:serde_json",
  "dep:ethers-core",
]
test-utils = [
  "reth-provider/test-utils",
  "dep:enr",
  "dep:ethers-core",
  "dep:tempfile",
]
geth-tests = []
test_harness = ["default"]
